...
    <string name="saved_cats">Saved Cats</string>
    <string name="settings">Settings</string>
    <string name="versionString">Version: 1.0 (Release)</string>
    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="contentDescriptionLogoOnNavigationForeground">App logo</string>
    <string name="loginImageDescription">AccountImage Or A Padlock</string>
    <string name="adoption_status">Adoption Status</string>
    <string name="your_information">Your Information</string>
    <string name="person_icon">Person Icon</string>
    <string name="location_icon">location icon</string>
...
    <string name="default_adoption_status_details">This is the adoption status details</string>
    <string name="cancel_button">CANCEL</string>
    <string name="cancel_adoption_default">Are you sure you want to cancel the adoption for this cat?</string>
    <string name="no">NO</string>
    <string name="signInForCatText">Please sign in to use the Saved Cat feature!</string>
    <string name="send">SEND</string>
    <string name="replied_to_request_feedback">Would you like to be replied to, by the developer?</string>
    <string name="feedbackOpening">You will be asked to login to the application if not already done so when you click send, this is to reduce spam, and allow responses from developers, to your emails.</string>
    <string name="help_third_paragraph">Once you find a cat that you may consider adopting tap on the info card. To get more information, after you have decided to adopt a specific cat, scroll down on the extra information screen and click the adopt button, if you haven\'t logged in, you will be asked to login, after logging in click the button again and the adoption forms will assist you.</string
    <string name="help_second_paragraph">Once using the tool, find a cat by browsing our selection, a cat will be displayed in a info card.</string>
    <string name="help_first_paragraph">You need to find a cat in our helpful cat finder tool!, to do this please navigate to the cat finder tab using the bottom navigation bar.</string>
    <string name="help_title">How to adopt a cat:</string>
    <string name="adoption_news">Adoption news</string>
...
