...
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/myAccountFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.account.MyAccountFragment"
        android:label="Account Details"
        tools:layout="@layout/my_account_fragment" />
...
